--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,15 @@
 body {
     background-color: #1e3d2f;
 }
+h1{
+    color: #d4e4d2;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+}
 
 .container {
-    max-width: 600px;
+    max-width: 900px;
     margin: 0 auto;
     padding-top: 160px;
 }
@@ -44,13 +50,13 @@ body {
 
 .div-formulario {
     font-size: 20px;
-    padding: 20px 0px 60px 30px;
+    padding: 20px 0px 200px 30px;
     border-radius: 10px;
     background-color: transparent;
     background-image: url("/static/imagenes/Designer3.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
-    border: 4px solid #2e5c3a;
+    border: 2px solid #2e5c3a;
     overflow: hidden;
 }
 
@@ -164,6 +170,7 @@ body {
     background-color: #d4e4d2;
     max-width: 9em;
     width: 100%;
+    
 }
 .mensajeExito {
     height: 1.6em;
@@ -265,4 +272,38 @@ body {
     display: flex;
     justify-content: center;
     text-align: center;
+}
+
+/* Estilos generales para la tabla */
+.listado {
+    border: 1px solid #3b7415;
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
+}
+
+.listado th, .listado td {
+    border: 1px solid #3b7415;
+    padding: 15px;
+    text-align: center; /* Centra el texto en las celdas */
+    word-wrap: break-word; /* Rompe las palabras largas para evitar que se salgan de las celdas */
+}
+
+.listado th {
+    background-color: rgb(150, 240, 123);
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+/* Estilos para las filas al pasar el mouse */
+.listado tbody tr:hover {
+    background-color: #2e5c3a;
+}
+
+/* Media query para dispositivos móviles */
+@media (max-width: 768px) {
+    .listado th, .listado td {
+        padding: 10px; /* Reducir el padding en dispositivos móviles */
+        font-size: 14px; /* Ajustar el tamaño de fuente para dispositivos móviles */
+    }
 }
