--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ h1{
     max-width: 900px;
     margin: 0 auto;
     padding-top: 0px;
-}
+} 
 .navbar {
     display: flex;
     justify-content: center;
@@ -44,6 +44,14 @@ h1{
     background-color: #d4e4d2;
 }
 
+.container-alta {
+    display: grid;
+    max-width: 60%;
+    height: 40em;
+    margin: 0 auto;
+    padding-top: 0px;
+}
+
 .contactanos {
     text-align: center;
     margin-bottom: 0px;
@@ -51,15 +59,21 @@ h1{
 }
 
 .div-formulario {
+    display: grid;
+    max-width: 80%;
     font-size: 20px;
     padding: 20px 0px 200px 30px;
     border-radius: 10px;
     background-color: transparent;
-    background-image: url("/static/imagenes/Designer3.jpeg");
+    background-image: url("/static/imagenes/Designer3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     border: 2px solid #2e5c3a;
     overflow: hidden;
+}
+
+.formulario{
+    max-width: 70%;
 }
 
 .formulario label {
@@ -74,7 +88,7 @@ h1{
 .formulario input[type="text"],
 .formulario input[type="email"],
 .formulario input[type="tel"] {
-    max-width: 30em;
+    max-width: 25em;
     width: 100%;
     height: 25px;
     margin: 0 0 10px 0;
@@ -105,22 +119,22 @@ h1{
 }
 
 .formulario select#motivo {
-    max-width: 13em;
+    max-width: 12.5em;
     width: 100%;
-    height: 30px;
+    height: 35px;
     margin-bottom: 10px;
     border-radius: 3px;
-    border: 3px solid transparent;
+    border: 0px solid transparent;
     transition: all 1s linear;
 }
 .formulario select#motivo:focus {
-    border: 3px solid #76c893;
+    border: 0px solid #76c893;
     outline: none;
 }
 
 .formulario textarea#mensaje {
     resize: vertical;
-    max-width: 30em;
+    max-width: 25em;    
     width: 100%;
     max-height: 150px;
     min-height: 70px;
@@ -156,22 +170,24 @@ h1{
 }
 
 .formulario button[type="submit"] {
-    display: block;
-    font-size: 1em;
+    display: inline-block;
+    font-size: 1.5em; 
     background-color: #2e5c3a;
     color: #d4e4d2;
     border: none;
     cursor: pointer;
-    max-width: 8em;
-    width: 100%;
+    width: 12em; 
     height: 2em;
+    text-align: center;
+    line-height: 2em;
+    text-decoration: none;
+    border-radius: 5px;
+    margin: 10px auto;
+    transition: background-color 0.3s ease;
 }
 .formulario button[type="submit"]:hover {
     color: #2e5c3a;
-    font-weight: bold;
     background-color: #d4e4d2;
-    max-width: 9em;
-    width: 100%;
     
 }
 .mensajeExito {
